:sparkles: add ability to add filters to the action dropdown

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -162,7 +162,8 @@ html.btd-on {
   }
 
   .dropdown-menu .typeahead-item,
-  .dropdown-menu [data-btd-action] {
+  .dropdown-menu [data-btd-action],
+  .dropdown-menu [data-btd-filter] {
     display: block;
     padding: 5px 20px;
     color: #292f33;
@@ -171,7 +172,8 @@ html.btd-on {
     text-decoration: none;
   }
 
-  .dropdown-menu .is-selected [data-btd-action] {
+  .dropdown-menu .is-selected [data-btd-action],
+  .dropdown-menu .is-selected [data-btd-filter] {
     color: #fff;
   }
 
