:art: setting to put back dark theme
Fixes #314

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,6 +27,7 @@
 @import './features/system-fonts.css';
 @import './features/show-provider-name.css';
 @import './features/hide-like-rt-indicators.css';
+@import './features/dark-revert.css';
 
 /* Emoji Panel */
 @import './emoji-panel.css';
