:wrench: ace editor integration

--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -307,3 +307,9 @@ kbd {
 .js-media-gif-container {
   background-image: none;
 }
+
+#custom-css-editor {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
