:boom: run prettier

--- a/src/css/features/flash-tweets.css
+++ b/src/css/features/flash-tweets.css
@@ -1,15 +1,26 @@
 @keyframes tweetEnter {
-  from { background-color: rgba(54, 82, 122, 1); }
-  to { background-color: rgba(54, 82, 122, 0); }
+  from {
+    background-color: rgba(54, 82, 122, 1);
+  }
+
+  to {
+    background-color: rgba(54, 82, 122, 0);
+  }
 }
 
 html.btd-on {
-  .btd__flash-mentions :matches(.column-type-interactions, .column-type-mention) .js-chirp-container > article:first-of-type {
+  .btd__flash-mentions
+  :matches(.column-type-interactions, .column-type-mention)
+  .js-chirp-container
+  > article:first-of-type {
     animation-duration: 2s;
     animation-name: tweetEnter;
   }
 
-  .btd__flash-all [class*="column-type"] .js-chirp-container > article:first-of-type {
+  .btd__flash-all
+  [class*="column-type"]
+  .js-chirp-container
+  > article:first-of-type {
     animation-duration: 2s;
     animation-name: tweetEnter;
   }
