--- a/src/css/features/stars.css
+++ b/src/css/features/stars.css
@@ -27,7 +27,7 @@ html.btd-on {
     .sprite {
       display: inline-block;
       vertical-align: text-top;
-      background-image: url('../../img/td_sprite_sheet_2013_@1x.png');
+      background-image: url("../../img/td_sprite_sheet_2013_@1x.png");
       background-repeat: no-repeat;
     }
 
@@ -55,7 +55,7 @@ html.btd-on {
       (min-resolution: 144dpi),
       (min-resolution: 1.5dppx) {
       .sprite {
-        background-image: url('../../img/td_sprite_sheet_2013_@2x.png');
+        background-image: url("../../img/td_sprite_sheet_2013_@2x.png");
         background-size: 240px 160px;
         background-repeat: no-repeat;
       }
