--- a/src/css/features/actions.css
+++ b/src/css/features/actions.css
@@ -8,7 +8,10 @@ html.btd-on {
     opacity: 0 !important;
   }
 
-  .btd__actions_on_hover .js-stream-item:hover .js-tweet-actions a.tweet-action {
+  .btd__actions_on_hover
+  .js-stream-item:hover
+  .js-tweet-actions
+  a.tweet-action {
     opacity: 1 !important;
   }
 }
