--- a/src/css/features/no-bg-modal.css
+++ b/src/css/features/no-bg-modal.css
@@ -27,7 +27,8 @@ html.btd-on {
     }
   }
 
-  .btd__no_bg_modal :matches(.mdl-btn-media, .is-inverted-light .mdl-btn-media) {
+  .btd__no_bg_modal
+  :matches(.mdl-btn-media, .is-inverted-light .mdl-btn-media) {
     opacity: 1;
   }
 
