--- a/src/css/features/show-provider-name.css
+++ b/src/css/features/show-provider-name.css
@@ -3,7 +3,8 @@ html.btd-on {
     position: relative;
   }
 
-  .btd__show_provider_indicator .js-media-preview-container[data-btd-provider]::after {
+  .btd__show_provider_indicator
+  .js-media-preview-container[data-btd-provider]::after {
     content: attr(data-btd-provider);
     position: absolute;
     bottom: 10px;
