--- a/src/css/giphy.css
+++ b/src/css/giphy.css
@@ -123,7 +123,7 @@ input.giphy-search-input {
 }
 
 .giphy-zone-logo {
-  background-image: url('../img/giphy-logo-dark.png');
+  background-image: url("../img/giphy-logo-dark.png");
 }
 
 .js-media-added.is-hidden ~ .btd-gif-source-indicator {
@@ -148,10 +148,10 @@ input.giphy-search-input {
   margin: 0 0.2em 0 0.3em;
 
   &.giphy {
-    background-image: url('../img/giphy-logo.png');
+    background-image: url("../img/giphy-logo.png");
   }
 
   &.tenor {
-    background-image: url('../img/tenor-logo.png');
+    background-image: url("../img/tenor-logo.png");
   }
 }
