--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,42 +1,42 @@
 /* Minimal themes + variations */
 
-@import './minimal.css';
-@import './theme-dark.css';
-@import './theme-light.css';
+@import "./minimal.css";
+@import "./theme-dark.css";
+@import "./theme-light.css";
 
 /* Visual Features */
 
-@import './features/actions.css';
-@import './features/bigger-emojis.css';
-@import './features/character-count.css';
-@import './features/collapse-dms.css';
-@import './features/flash-tweets.css';
-@import './features/gray-notif-icns.css';
-@import './features/hide-context.css';
-@import './features/hide-scrollbars.css';
-@import './features/hide-url-thumb.css';
-@import './features/collapse-columns.css';
-@import './features/no-col-icns.css';
-@import './features/no-bg-modal.css';
-@import './features/round-pic.css';
-@import './features/show-verified.css';
-@import './features/small-icns.css';
-@import './features/slim_scrollbars.css';
-@import './features/username-typeahead.css';
-@import './features/stars.css';
-@import './features/system-fonts.css';
-@import './features/show-provider-name.css';
-@import './features/hide-like-rt-indicators.css';
+@import "./features/actions.css";
+@import "./features/bigger-emojis.css";
+@import "./features/character-count.css";
+@import "./features/collapse-dms.css";
+@import "./features/flash-tweets.css";
+@import "./features/gray-notif-icns.css";
+@import "./features/hide-context.css";
+@import "./features/hide-scrollbars.css";
+@import "./features/hide-url-thumb.css";
+@import "./features/collapse-columns.css";
+@import "./features/no-col-icns.css";
+@import "./features/no-bg-modal.css";
+@import "./features/round-pic.css";
+@import "./features/show-verified.css";
+@import "./features/small-icns.css";
+@import "./features/slim_scrollbars.css";
+@import "./features/username-typeahead.css";
+@import "./features/stars.css";
+@import "./features/system-fonts.css";
+@import "./features/show-provider-name.css";
+@import "./features/hide-like-rt-indicators.css";
 
 /* Emoji Panel */
-@import './emoji-panel.css';
+@import "./emoji-panel.css";
 
 /* G I P H Y */
-@import './giphy.css';
+@import "./giphy.css";
 
 /* Embed/modals */
 
-@import './embeds.css';
+@import "./embeds.css";
 
 html.btd-on {
   [data-btdtheme] .dropdown-menu {
@@ -62,7 +62,7 @@ html.btd-on {
   [data-btdtheme] .js-media-preview-container.is-video a {
     &::after,
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       top: 50%;
       left: 50%;
@@ -84,7 +84,7 @@ html.btd-on {
       height: calc(40px * 80 / 100);
       opacity: 0.8;
       transform: translate(-45%, -50%);
-      background-image: url('../icons/controller-play.svg');
+      background-image: url("../icons/controller-play.svg");
     }
   }
 
@@ -138,10 +138,7 @@ html.btd-on {
     max-height: 650px !important;
   }
 
-  body :matches(.tweet-avatar,
-.prf-img,
-.avatar,
-.compose-account) {
+  body :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
     border-radius: 10% !important;
   }
 
@@ -203,14 +200,21 @@ html.btd-on {
     }
   }
 
-  .btd__old_replies .js-stream-item:not(.btd-is-retweet) .js-tweet:not(.txt-mute) .thread ~ .tweet-body,
+  .btd__old_replies
+  .js-stream-item:not(.btd-is-retweet)
+  .js-tweet:not(.txt-mute)
+  .thread
+  ~ .tweet-body,
   .btd__old_replies .js-stream-item .quoted-tweet {
     .other-replies::before {
       display: none;
     }
   }
 
-  .btd__old_replies .js-stream-item:not(.btd-is-retweet) .js-tweet:not(.txt-mute) .tweet-body {
+  .btd__old_replies
+  .js-stream-item:not(.btd-is-retweet)
+  .js-tweet:not(.txt-mute)
+  .tweet-body {
     .other-replies {
       font-size: 0;
       height: 0;
